--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rustchallenge"
+name = "snake"
 version = "0.1.0"
 authors = ["Kozhenin Nick <kozhenin.nick@gmail.com>"]
 edition = "2018"
@@ -8,3 +8,4 @@ edition = "2018"
 
 [dependencies]
 rand = "0.8.4"
+kiss3d = "0.31"
